# django_learning

./: README.md  main.py  pyproject.toml
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: models.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/taskmanager/: models.py  serializers.py  urls.py  views.py
djangotutorial/taskmanager/migrations/: 0001_initial.py  0001_squashed_0007_remove_task_deleted_at.py  0001_squashed_0008_task_deleted_at.py  0002_alter_users_id.py  0003_alter_users_id.py  0004_alter_users_id.py  0005_alter_users_email.py  0006_task_delete_users.py  0007_remove_task_deleted_at.py  0008_task_deleted_at.py  0009_remove_task_deleted_at.py  0010_task_deleted_at.py
